[package]
name = "recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
annoy = [
  "dep:arroy",
  "dep:heed"
]
random_recommender = [
  "dep:rand",
  "uuid/fast-rng",
  "uuid/v4",
]
hnsw = [
  "dep:hnsw_rs",
  "dep:ndarray",
  "dep:dashmap",
  "space"
]
space = []

[dependencies]
anyhow = "1.0.82"
arroy = { version = "0.3.0", optional = true }
dashmap = { version = "5.5.3", optional = true }
derive_builder = "0.20.0"
heed = { version = "0.20.0-alpha.9", optional = true }
hnsw_rs = { version = "0.2.1", optional = true }
ndarray = { version = "0.15.6", optional = true, features = ["rayon"] }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.198", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.58"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde"] }
